tap-talk-k8s/chat-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: chat-service
 labels:
  app: chat-service
spec: 
 replicas: 1
 selector:
  matchLabels:
   app: chat-service
 template:
  metadata:
   labels:
    app: chat-service
  spec:
   containers:
   - name: chat-service
     image: frmnj/taptalk-chat-service:latest
     imagePullPolicy: Always
     ports: 
     - containerPort: 8765
   - name: redis
     image: redis:alpine3.20
     ports:
     - containerPort: 6379
