tap-talk-k8s/taptalk-censor-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: censor-service
 labels:
  app: censor-service
spec: 
 replicas: 2 
 selector:
  matchLabels:
   app: censor-service
 template:
  metadata:
   labels:
    app: censor-service
  spec:
   containers:
   - name: censor-service
     image: frmnj/taptalk-censor-service:latest
     imagePullPolicy: Always
     ports: 
     - containerPort: 8080
     resources:
       requests:
         cpu: "100m"
         memory: "128Mi"
       limits:
         cpu: "500m"
         memory: "256Mi"
