tap-talk-k8s/taptalk-question-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: question-service
  labels:
    app: quesion-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: question-service
  template:
    metadata:
      labels:
        app: question-service
    spec:
      containers:
      - name: question-service
        image: frmnj/taptalk-question-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
