tap-talk-k8s/taptalk-censor-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: censor-service
spec:
  selector:
    app: censor-service  # Debe coincidir con las labels del Deployment
  ports:
    - protocol: TCP
      port: 80        # Puerto del Service
      targetPort: 3000  # Puerto del contenedor
  type: LoadBalancer  # Para acceso externo (NodePort en desarrollo local)
