tap-talk-k8s/taptalk-question-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: question-service
spec:
  selector:
    app: question-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
