tap-talk-k8s/taptalk-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: taptalk-web
spec:
  selector:
    app: taptalk-web  # Debe coincidir con las labels del Deployment
  ports:
    - protocol: TCP
      port: 80        # Puerto del Service
      targetPort: 3000  # Puerto del contenedor
  type: ClusterIP  # Use ClusterIP for internal access; expose externally only via Ingress
